@@ -21,12 +21,14 @@
 
 ################################################################################
 # The following code is common between pglcmd, pglcmd.wd,
-# cron.daily, init and debian/postinst.
+# cron.daily, init, debian/pglcmd.postinst and blockcontrol2pglcmd.sh.
 
 # if-up is similar, but exits successfully if CONTROL_MAIN is not there, yet.
 # This can happen in early boot stages before local file systems are mounted.
 
 # CONTROL_MAIN has to be set correctly in all just mentioned files.
+# This is done by the pgl/pglcmd/Makefile based on the settings in the
+# pgl/Makefile.
 CONTROL_MAIN="/usr/lib/pgl/pglcmd.main"
 
 # Configure pglcmd and load functions.
