@@ -12,6 +12,7 @@ pgl 2.1.0~pre1 The GUI release!
     using netfilter multiport module.
     Reason: Allow pgl-gui to *instantly* add/remove single ports to the
     whitelisting.
+  * added blockcontrol2pglcmd.sh configuration transition script
 
 -- jre <jre-phoenix@users.sourceforge.net>  Wed, 20 Apr 2011 14:13:36 +0200
 
